Fix: G2.8xLarge does not support EBS-optimized launch
cfncluster create fails if the instance is g2.8xlarge because
of EBS-optimized instances are not supported

Signed-off-by: Mohan Gandhi <mohgan@amazon.com>

--- a/cloudformation/cfncluster.cfn.yaml
+++ b/cloudformation/cfncluster.cfn.yaml
@@ -1004,7 +1004,7 @@ Mappings:
       EBSOpt: 'True'
     g2.8xlarge:
       Arch: 64HVM
-      EBSOpt: 'True'
+      EBSOpt: 'False'
     p2.xlarge:
       Arch: 64HVM
       EBSOpt: 'True'
