Updated cloudformation config files to include x1e.32xlarge instance

--- a/cloudformation/cfncluster.cfn.yaml
+++ b/cloudformation/cfncluster.cfn.yaml
@@ -572,6 +572,7 @@ Parameters:
     - m4.16xlarge
     - x1.16xlarge
     - x1.32xlarge
+    - x1e.32xlarge
     - f1.2xlarge
     - f1.16xlarge
   ComputeInstanceType:
@@ -642,6 +643,7 @@ Parameters:
     - m4.16xlarge
     - x1.16xlarge
     - x1.32xlarge
+    - x1e.32xlarge
     - f1.2xlarge
     - f1.16xlarge
   InitialQueueSize:
