Increasing sqs queue message retention period
As of today we have default retenion period
for sqs message (which is 4 days), stop/start behavior
may miss some message as we stop master today.
Increasing sqs message retention period to max (14 days)
to minimize the chance of this occurence.

Signed-off-by: Mohan Gandhi <mohgan@amazon.com>

--- a/cloudformation/cfncluster.cfn.yaml
+++ b/cloudformation/cfncluster.cfn.yaml
@@ -1072,7 +1072,8 @@ Mappings:
 Resources:
   SQS:
     Type: AWS::SQS::Queue
-    Properties: {}
+    Properties:
+      MessageRetentionPeriod: 1209600
     Metadata:
       AWS::CloudFormation::Designer:
         id: 2f599618-92e8-49cf-92bd-551ba9775f39
